[package]
name = "deft-video-player"
version = "0.1.0"
edition = "2021"

[dependencies]
deft = "0.4.3"
deft-video = { path = "packages/deft-video" }

[build-dependencies]
deft-build = { version = "0.2.0" }

[features]
tray = ["deft/tray"]
x11 = ["deft/x11"]
wayland = ["deft/wayland"]

[lib]
name = "deftapp"
path = "src/main.rs"
crate-type=["cdylib"]