[package]
name = "deft-video-player"
version = "0.1.0"
edition = "2021"

[dependencies]
deft = { version = "0.10.2", features = ["dialog", "gl"] }
deft-video = { path = "packages/deft-video" }
env_logger = "0.11.6"

[build-dependencies]
deft-build = { version = "0.2.0" }

[features]
tray = ["deft/tray"]

[lib]
name = "deftapp"
path = "src/main.rs"
crate-type=["cdylib"]